--- a/index.html
+++ b/index.html
@@ -4,10 +4,73 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="styles.css">
   <title>The Hundreds</title>
 </head>
 <body>
-  <!-- Your HTML content goes here -->
+  <!-- Header -->
+  <header>
+    <nav>
+      <ul>
+        <img src="logo.gif" alt="Logo" class="logo">
+        <li><a href="#home">Home</a></li>
+        <li><a href="#apparel">Apparel</a></li>
+        <li><a href="#headwear">Headwear</a></li>
+        <li><a href="#accessories">Accessories</a></li>
+        <li><a href="#aboutus">About Us</a></li>
+      </ul>
+    </nav>
+  </header>
+  
+  <!-- Home Section -->
+  <section id="home">
+    <h1>The Hundreds</h1>
+    <p>The Hundreds is a streetwear brand founded in Los Angeles in 2003 by law school classmates Bobby Kim and Ben Shenassafar. 
+  
+  <!-- Apparel Section -->
+  <section id="apparel">
+    <h2>Apparel</h2>
+    <p>Leave this section empty for now.</p>
+  </section>
+  
+  <!-- Headwear Section -->
+  <section id="headwear">
+    <h2>Headwear</h2>
+    <p>Leave this section empty for now.</p>
+  </section>
+  
+  <!-- Accessories Section -->
+  <section id="accessories">
+    <h2>Accessories</h2>
+    <p>Leave this section empty for now.</p>
+  </section>
+  
+  <!-- About Us Section -->
+  <section id="aboutus">
+    <h2>About Us</h2>
+    <p>Leave this section empty for now.</p>
+  </section>
+  
+  <!-- Subscribe Section -->
+  <section id="subscribe">
+    <h2>Subscribe</h2>
+    <form>
+      <label for="email">Enter your email:</label>
+      <input type="email" id="email" name="email">
+      <input type="submit" value="Subscribe">
+    </form>
+  </section>
+  
+  <!-- Social Media Section -->
+  <section id="socialmedia">
+    <h2>Follow us on Social Media</h2>
+    <ul>
+      <li><a href="https://www.facebook.com/TheHundreds/">Facebook</a></li>
+      <li><a href="https://www.instagram.com/thehundreds/">Instagram</a></li>
+      <li><a href="https://twitter.com/thehundreds">Twitter</a></li>
+    </ul>
+  </section>
 </body>
 </html>
+
 
