--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header>
     <nav>
       <ul>
-        <img src="logo.gif" alt="Logo" class="logo">
+        <img src="logo.gif" alt="Logo" width="30" height="30">
         <li><a href="#home">Home</a></li>
         <li><a href="#apparel">Apparel</a></li>
         <li><a href="#headwear">Headwear</a></li>
@@ -26,12 +26,35 @@
   <section id="home">
     <h1>The Hundreds</h1>
     <p>The Hundreds is a streetwear brand founded in Los Angeles in 2003 by law school classmates Bobby Kim and Ben Shenassafar. 
+        <p></p>
   
   <!-- Apparel Section -->
-  <section id="apparel">
+<section id="apparel">
     <h2>Apparel</h2>
-    <p>Leave this section empty for now.</p>
-  </section>
+    <div class="gallery">
+      <div class="gallery-item">
+        <img src="image1.png" alt="Image 1">
+        <div class="item-details">
+          <p class="item-name">HAPPY EARTH DAY T-SHIRT</p>
+          <p class="item-price">$44.44</p>
+        </div>
+      </div>
+      <div class="gallery-item">
+        <img src="image2.png" alt="Image 2">
+        <div class="item-details">
+          <p class="item-name">HAPPY EARTH DAY T-SHIRT</p>
+          <p class="item-price">$44.44</p>
+        </div>
+      </div>
+      <div class="gallery-item">
+        <img src="image3.png" alt="Image 3">
+        <div class="item-details">
+          <p class="item-name">VIEW JERSEY</p>
+          <p class="item-price">$89.44</p>
+        </div>
+      </div>
+    </div>
+  </section>  
   
   <!-- Headwear Section -->
   <section id="headwear">
@@ -64,12 +87,17 @@
   <!-- Social Media Section -->
   <section id="socialmedia">
     <h2>Follow us on Social Media</h2>
-    <ul>
-      <li><a href="https://www.facebook.com/TheHundreds/">Facebook</a></li>
-      <li><a href="https://www.instagram.com/thehundreds/">Instagram</a></li>
-      <li><a href="https://twitter.com/thehundreds">Twitter</a></li>
-    </ul>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<ul class="social-media">
+  <li><a href="https://www.facebook.com/TheHundreds/"><i class="fa fa-facebook"></i> Facebook</a></li>
+  <li><a href="https://www.instagram.com/thehundreds/"><i class="fa fa-instagram"></i> Instagram</a></li>
+  <li><a href="https://twitter.com/thehundreds"><i class="fa fa-twitter"></i> Twitter</a></li>
+</ul>
   </section>
+  <div id="disclaimer">
+    <p>This website is not an official webpage for The Hundreds. It is created by Wesley Sum for Snap Engineering Academy Project 2023.</p>
+  </div>
 </body>
 </html>
 
