--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
   <header>
     <nav>
       <ul>
-        <img src="logo.gif" alt="Logo" width="30" height="30">
+        <img src="logo.png" alt="Logo" width="30" height="30">
         <li><a href="#home">Home</a></li>
         <li><a href="#apparel">Apparel</a></li>
         <li><a href="#headwear">Headwear</a></li>
         <li><a href="#accessories">Accessories</a></li>
-        <li><a href="#aboutus">About Us</a></li>
+        <li><a href="aboutus.html">About Us</a></li>
       </ul>
     </nav>
   </header>
@@ -59,20 +59,66 @@
   <!-- Headwear Section -->
   <section id="headwear">
     <h2>Headwear</h2>
-    <p>Leave this section empty for now.</p>
+    <div class="gallery">
+        <div class="gallery-item">
+          <img src="hat1.png" alt="Hat 1">
+          <div class="item-details">
+            <p class="item-name">BOOMY CAP</p>
+            <p class="item-price">$19.99</p>
+          </div>
+        </div>
+        <div class="gallery-item">
+          <img src="hat2.png" alt="Hat 2">
+          <div class="item-details">
+            <p class="item-name">LA HUNDREDS</p>
+            <p class="item-price">$24.99</p>
+          </div>
+        </div>
+        <div class="gallery-item">
+          <img src="hat3.png" alt="Hat 3">
+          <div class="item-details">
+            <p class="item-name">BEANIE</p>
+            <p class="item-price">$14.99</p>
+          </div>
+        </div>
+      </div>
+    <p></p>
   </section>
   
   <!-- Accessories Section -->
   <section id="accessories">
     <h2>Accessories</h2>
-    <p>Leave this section empty for now.</p>
+    <div class="gallery">
+        <div class="gallery-item">
+          <img src="accesory1.png" alt="accesory 1">
+          <div class="item-details">
+            <p class="item-name">RSWD TOTE</p>
+            <p class="item-price">$59.00</p>
+          </div>
+        </div>
+        <div class="gallery-item">
+          <img src="accesory2.png" alt="accesory 2">
+          <div class="item-details">
+            <p class="item-name">Henri adam tote bag</p>
+            <p class="item-price">$40.44</p>
+          </div>
+        </div>
+        <div class="gallery-item">
+          <img src="accesory3.png" alt="accesory 3">
+          <div class="item-details">
+            <p class="item-name">TEAM SOCKS</p>
+            <p class="item-price">$16.00</p>
+          </div>
+        </div>
+      </div>
+    <p></p>
   </section>
   
-  <!-- About Us Section -->
+  <!-- About Us Section 
   <section id="aboutus">
     <h2>About Us</h2>
     <p>Leave this section empty for now.</p>
-  </section>
+  </section>-->
   
   <!-- Subscribe Section -->
   <section id="subscribe">
